--- a/src/pages/style-skills.css
+++ b/src/pages/style-skills.css
@@ -106,18 +106,22 @@ body {
 
 @media screen and (prefers-color-scheme: dark) {
   body {
-    background-color: var(--color-darker);
+    background-image: linear-gradient(to bottom, var(--color-top) , var(--color-darker));
     color: var(--color-light-gray);
   }
   
   .pageSkills {
-    background-color: var(--color-darker);
+    background-image: linear-gradient(to bottom, var(--color-top) , var(--color-darker));
     color: var(--color-light-gray);
   }
 
   .skills-card {
-    background-color: var(--color-dark);
-    border: var(--color-gray);
+    background-color: var(--color-gray);
+    border: var(--color-light-gray);
+    color: var(--color-light-gray);
+  }
+
+  .skills-card {
     color: var(--color-light-gray);
   }
 }
